# kwin-effect-scale-to-screen

./: .gitignore  CMakeLists.txt  Makefile  ReadMe.md  build.sh  main.cpp  metadata.json  scale_to_screen.cpp  scale_to_screen.h  scale_to_screen_effect.cpp  scale_to_screen_effect.h
.github/workflows/: ci-ubuntu-26.04.yml  release-ubuntu-26.04.yml  ubuntu-26.04.yml
cmake/: DetectLinuxDistro.cmake  packaging.cmake
devel/: devnotes.md  install_link.sh
devel/DEBIAN/: control
devel/docker/: ubuntu-26.04.dockerfile
scaletoscreen/: CMakeLists.txt  globals.h  main.cpp  scale_to_screen.cpp  scale_to_screen.h  scaler.cpp  scaler.h  util.cpp  util.h
src/: scale_to_screen.cpp  scale_to_screen.h  scaler.cpp  scaler.h  util.cpp  util.h
src_old/: metadata.json.in  scale_to_screen.cpp  scale_to_screen.h
